Export PDF from notebook

--- a/exercises/lti_system_stability_analysis/lti_system_stability_analysis.ipynb
+++ b/exercises/lti_system_stability_analysis/lti_system_stability_analysis.ipynb
@@ -50,12 +50,10 @@
     "\n",
     "The state-space representation is then given by:\n",
     "\n",
-    "$$\n",
-    "\\begin{align*}\n",
+    "\\begin{align}\n",
     "    \\dot{x}(t) &= \\mathbf{A} x(t) + \\mathbf{B} u(t) \\\\\n",
     "    y(t) &= \\mathbf{C} x(t) + \\mathbf{D} u(t)\n",
-    "\\end{align*}\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "where:\n",
     "\n",
