--- a/exercises/pressure_distribution_optimisation/pressure_distribution_optimisation.ipynb
+++ b/exercises/pressure_distribution_optimisation/pressure_distribution_optimisation.ipynb
@@ -229,7 +229,7 @@
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    np.ndarray\n",
+    "    source : np.ndarray\n",
     "        Heat source term for the Poisson equation.\n",
     "    \"\"\"\n",
     "    # Initialise heat source term\n",
@@ -240,7 +240,9 @@
     "        f += np.exp(-((X - xb) ** 2 + (Y - yb) ** 2) / sigma**2)\n",
     "\n",
     "    # Negative sign as per the Poisson equation\n",
-    "    return -f / k_const\n"
+    "    source = -f / k_const\n",
+    "\n",
+    "    return source\n"
    ]
   },
   {
@@ -271,7 +273,7 @@
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    np.ndarray\n",
+    "    P : np.ndarray\n",
     "        Pressure field with boundary conditions applied.\n",
     "    \"\"\"\n",
     "    P[0, :] = P0  # Left boundary\n",
@@ -314,8 +316,8 @@
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    np.ndarray\n",
-    "        Pressure field at the next time step.\n",
+    "    P_new : np.ndarray\n",
+    "        Updated pressure field.\n",
     "    \"\"\"\n",
     "    # Update pressure field using the Poisson equation\n",
     "    P_new = (\n",
@@ -335,7 +337,7 @@
    "source": [
     "### Iterative solver\n",
     "\n",
-    "An iterative Gauss-Seidel method is used to solve the Poisson equation until the solution converges. The convergence criterion is based on the maximum absolute difference between successive iterations."
+    "A Jacobi iterative method is used to solve the Poisson equation until the solution converges. The convergence criterion is based on the maximum absolute difference between successive iterations."
    ]
   },
   {
@@ -363,8 +365,8 @@
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    np.ndarray\n",
-    "        Pressure field after solving the Poisson equation.\n",
+    "    P : np.ndarray\n",
+    "        Pressure field at the converged state.\n",
     "    \"\"\"\n",
     "    for it in range(max_iter):\n",
     "        # Copy the pressure field and update it\n",
@@ -399,13 +401,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def solve_pressure_distribution(burners):\n",
     "    \"\"\"\n",
-    "    Computes the pressure distribution by solving the Poisson equation for a given burner configuration.\n",
+    "    Compute the pressure distribution by solving the Poisson equation for a given burner configuration.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
@@ -414,7 +416,7 @@
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    np.ndarray\n",
+    "    P : np.ndarray\n",
     "        Pressure distribution in the combustion chamber.\n",
     "    \"\"\"\n",
     "    # Calculate the source term for the Poisson equation\n",
@@ -480,10 +482,8 @@
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    float\n",
-    "        Cost function value (pressure variance).\n",
-    "    np.ndarray\n",
-    "        Pressure field after solving the Poisson equation\n",
+    "    cost : float\n",
+    "        Cost function to be minimised.\n",
     "    \"\"\"\n",
     "    # Parse the burner configuration using the helper function\n",
     "    if burners.ndim == 1:\n",
