--- a/exercises/thermal_analysis/thermal_analysis.ipynb
+++ b/exercises/thermal_analysis/thermal_analysis.ipynb
@@ -38,11 +38,11 @@
     "\n",
     "The problem is solved under specific boundary and initial conditions.\n",
     "\n",
-    "1. **Initial condition**:\n",
+    "1. **Initial condition**\n",
     "\n",
     "    The initial temperature $T(x, y, 0)$ is assumed to be uniform across the domain, representing the ambient temperature $(300 \\, \\text{K})$ before the lightning strike.\n",
     "\n",
-    "2. **Boundary conditions**:\n",
+    "2. **Boundary conditions**\n",
     "    - Convective heat dissipation at the domain boundaries:\n",
     "        $$\n",
     "        -k \\frac{\\partial T}{\\partial n} = h (T - T_\\infty),\n",
@@ -82,8 +82,8 @@
     "The second spatial derivatives are approximated using central differences:\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial^2 T}{\\partial x^2} \\approx \\frac{T_{i+1,j}^n - 2T_{i,j}^n + T_{i-1,j}^n}{\\Delta x^2}, \\quad\n",
-    "\\frac{\\partial^2 T}{\\partial y^2} \\approx \\frac{T_{i,j+1}^n - 2T_{i,j}^n + T_{i,j-1}^n}{\\Delta y^2}.\n",
+    "\\frac{\\partial^2 T}{\\partial x^2} \\approx \\frac{T_{i+1,j} - 2T_{i,j} + T_{i-1,j}}{\\Delta x^2}, \\quad\n",
+    "\\frac{\\partial^2 T}{\\partial y^2} \\approx \\frac{T_{i,j+1} - 2T_{i,j} + T_{i,j-1}}{\\Delta y^2}.\n",
     "$$\n",
     "\n",
     "#### Temporal discretisation\n",
@@ -91,7 +91,7 @@
     "The time derivative is approximated using the forward Euler method:\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial T}{\\partial t} \\bigg|_{(i,j)} \\approx \\frac{T_{i,j}^{n+1} - T_{i,j}^n}{\\Delta t},\n",
+    "\\frac{\\partial T}{\\partial t} \\bigg|_{(i,j)} \\approx \\frac{T_{i,j}^{n+1} - T_{i,j}^n}{\\Delta t}\n",
     "$$\n",
     "\n",
     "where $T_{i,j}^n$ denotes the temperature at position $(i, j)$ and time $n$.\n",
